--- a/Dil.html
+++ b/Dil.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html>
 <html>
-    
+    <table id="t01">
+        <tr>
+          <th>Firstname</th>
+          <th>Lastname</th>
+          <th>Age</th>
+        </tr>
+        <tr>
+          <td>Eve</td>
+          <td>Jackson</td>
+          <td>94</td>
+        </tr>
+      </table>
 </html>
