--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
     <body>
-      <p> Hello </p>
-  </body>
+        <h1> Hello </h1>
+        <p> Hello </p>   
+    </body>
 </html>
