--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,7 @@
       <p> Hello </p>
       <p>world</p>
       <h1>
-        Mama thama Chimsaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-      </h1>
-        <h1>balloooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
-      </h1>
+        hiiiiiiiii
+     </h1>
   </body>
 </html>
