--- a/Dil.html
+++ b/Dil.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <h1>SIM LAKA LAKA BUM BUM</h1>
+    <h1>BLA BLA BLA BLA BLA</h1>
     <table id="t01">
         <tr>
           <th>Firstname</th>
